platformer/apps/active/t2/service-active-default-env-3192360657.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app_environment_id: 7a572d38-8698-4b7f-a86c-80cfb9b41689
    env_id: ce77a8f9-bf57-4b39-92ea-c6183b90b279
    env_name: t2
    organization_id: 6c869bc0-38b8-4504-bfed-9c5da7c8f15a
    platformer_app_id: 8e72a7ad-a394-42e3-be56-5c5e3463a0e4
    platformer_app_name: active
    platformer_component: rudder
    platformer_system: "true"
    project_id: 165f9b1a-b501-457f-902b-ac957491213c
  name: active-default-env-3192360657
  namespace: rtyrt
spec:
  ports:
  - name: port-8080
    port: 8080
    targetPort: 8080
  selector:
    app_environment_id: 7a572d38-8698-4b7f-a86c-80cfb9b41689
    env_id: ce77a8f9-bf57-4b39-92ea-c6183b90b279
    env_name: t2
    organization_id: 6c869bc0-38b8-4504-bfed-9c5da7c8f15a
    platformer_app_id: 8e72a7ad-a394-42e3-be56-5c5e3463a0e4
    platformer_app_name: active
    platformer_component: rudder
    platformer_system: "true"
    project_id: 165f9b1a-b501-457f-902b-ac957491213c
  type: ClusterIP
