platformer/apps/active/t2/ingress-active-636773776.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: balanced
    nginx.ingress.kubernetes.io/backend-protocol: http
    nginx.ingress.kubernetes.io/permanent-redirect-code: "301"
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/session-cookie-name: route
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0
    platformer_ingress_id: f39b71f2-c3b5-40f5-bfd7-7febd32e8fea
  labels:
    platformer_ingress_id: f39b71f2-c3b5-40f5-bfd7-7febd32e8fea
  name: active-636773776
  namespace: default-env1593166500865
spec:
  rules:
  - host: ""
    http:
      paths:
      - backend:
          serviceName: active-default-env-3192360657
          servicePort: 8080
        path: /
  tls: null
